--- a/index.html
+++ b/index.html
@@ -56,9 +56,24 @@
         catalogues se voient largement documentés et reproduits.
       </p>
       <ol>
-        <li><img src="雄性動物 4.png" alt="" /></li>
-        <li><img src="雄性動物 3.png" alt="" /></li>
-        <li><img src="雄性動物 2.png" alt="" /></li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
       </ol>
       <h2>
         共同決議的模棱兩可承諾生如人、美如神，《甘露水》蘊含黃土水惦念的台灣之美
@@ -84,15 +99,60 @@
       </p>
 
       <ul>
-        <li><img src="雄性動物 4.png" alt="" /></li>
-        <li><img src="雄性動物 3.png" alt="" /></li>
-        <li><img src="雄性動物 2.png" alt="" /></li>
-        <li><img src="雄性動物 4.png" alt="" /></li>
-        <li><img src="雄性動物 2.png" alt="" /></li>
-        <li><img src="雄性動物 3.png" alt="" /></li>
-        <li><img src="雄性動物 3.png" alt="" /></li>
-        <li><img src="雄性動物 4.png" alt="" /></li>
-        <li><img src="雄性動物 2.png" alt="" /></li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
       </ul>
       <h2>Lorem ipsum dolor sit amet.</h2>
     </div>
