--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body dir>
     <div class="content">
+      <h1>
+        En 1997 paraissait L’irrésolution commune d’un engagement équivoque.
+      </h1>
       <h2 data-dir="Ecart">Lionel Bovier et Christophe Cherix</h2>
       <p>
         En 1997 paraissait L’irrésolution commune d’un engagement équivoque.
@@ -55,6 +58,10 @@
         entre 1976 et 1979, tandis que dans les pages qui suivent les livres et
         catalogues se voient largement documentés et reproduits.
       </p>
+      <p>
+        這是一些文字，裡面有 _([Note.1]: 這是註解1的內容)_ 一個註釋，另外還有
+        _([Note.2]: 這是註解2的內容)_ 第二個註釋。
+      </p>
       <ol>
         <li>
           <img
@@ -64,7 +71,7 @@
         </li>
         <li>
           <img
-            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
             alt=""
           />
         </li>
@@ -75,20 +82,34 @@
           />
         </li>
       </ol>
-      <h2>
+      <h2 data-dir="123">
         共同決議的模棱兩可承諾生如人、美如神，《甘露水》蘊含黃土水惦念的台灣之美
       </h2>
       <p>
-        1997年，一本名為《共同決議的模棱兩可承諾》的書籍出版。這本書由Christophe
-        Cherix 和 Lionel
+        1997年，一本名為《共同決議的模棱兩可承諾》 _([註解 1]: En 1997
+        paraissait L’irrésolution commune d’un engagement équivoque. Ecart,
+        Genève 1969-1982)_ 的書籍出版。這本書由Christophe Cherix 和 Lionel
         Bovier編纂，回應了由他們策劃的同名展覽，分別在日內瓦現代與當代藝術博物館（Mamco）、日內瓦藝術與歷史博物館的圖案陳列室及聖日耳曼當代影像中心舉辦。此出版計劃旨在首次描述並追溯1969年由John
         M Armleder、Claude Rychner和Patrice
         Lucchini在日內瓦創立的Ecart團隊所開展的活動。該作品已成為理解這既是一個藝術家團隊、畫廊、表演生成器、書店，甚至茶室的重要讀物；如今，根據Ecart檔案的最新發掘情況，這本失傳多時的書籍已重新出版。
       </p>
       <p>
         此再版是Mamco和日內瓦藝術及設計高等學院（HEAD）聯合圍繞日內瓦高校內保存的檔案資料進行的研究項目的主要成果之一。Lionel
-        Bovier（現任Mamco主管）、Yann
-        Chateigné（日內瓦HEAD教授）和藝術史學者Elisabeth
+        Bovier（現任Mamco主管）_([註解3]: Lorem ipsum, dolor sit amet
+        consectetur adipisicing elit. Ipsa non molestiae consequatur pariatur
+        odio laboriosam, molestias maiores repudiandae cumque sint at aperiam.
+        Ad ipsum illum earum minus aliquid, <a href="#">explicabo</a> laudantium
+        tenetur totam, in sint est officiis ut aut illo? Omnis commodi deleniti
+        voluptas delectus sequi, aut veritatis suscipit nemo molestias saepe
+        perferendis aliquam! Eius aspernatur fugit ea illum velit dolor maiores
+        voluptate fugiat reprehenderit natus, deleniti harum! Ab corporis quos
+        ad? Adipisci, alias facere dicta fuga tempora aperiam dignissimos aut
+        cupiditate distinctio. Quaerat aliquid maxime possimus fuga quos
+        distinctio, voluptates, provident recusandae modi dicta non iusto
+        assumenda quia fugit. )_、Yann
+        Chateigné（日內瓦HEAD教授）和藝術史學者_([molestias]:
+        帕森斯的另一層預設遮蓋了素材的審美經驗與圖形設計的評價之間的直接連接。他指出設計的概念意味終產物與設計過程有一理性的連結：當我們在設計某個東西，對其最後要用來做什麼的設想，會引導我們設計的整個過程。帕森斯認為，是這個理性連結決定我們如何評價設計的實作，而他對此提供的解釋是「問題」與「解方」。這也符合多數人對設計的理解，亦即對問題提出解決的方法。根據這樣的理解，對圖形設計的評價，只關乎其是否良好地解決視覺溝通的問題。當然，圖形設計師可以透過素材本身提供的審美經驗解決視覺溝通的問題。不過，如此一來我們的焦點便在於透過這樣的審美經驗解決問題是否有效，而非素材本身的審美價值。)_
+        Elisabeth
         Jobin共同進行了長期研究，對檔案盒進行整理、對其內容進行分類以及對項目進行描述。
       </p>
       <p>
@@ -107,7 +128,7 @@
         </li>
         <li>
           <img
-            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
             alt=""
           />
         </li>
@@ -131,13 +152,13 @@
         </li>
         <li>
           <img
-            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
             alt=""
           />
         </li>
         <li>
           <img
-            src="https://drive.google.com/uc?id=143cfyrJM8x7V-K1jGIXYis_Snewq1_8h"
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
             alt=""
           />
         </li>
@@ -154,13 +175,150 @@
           />
         </li>
       </ul>
+      <ul>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1dBgYhBrauSUI5i_ahNv_5WkwuQ5gbDLW"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1UNHK11bm8ixwI0SdL6CrmY6E0HXRx-_b"
+            alt=""
+          />
+        </li>
+        <li>
+          <img
+            src="https://drive.google.com/uc?id=1ZsgLPfdzCVCfLMCdPQZj5mThkk36U_lS"
+            alt=""
+          />
+        </li>
+      </ul>
       <h2>Lorem ipsum dolor sit amet.</h2>
     </div>
     <script src="https://fw.herc.se/fw.js"></script>
     <script>
       const fw = {
         name: "Framework Alpha",
-        Info: `...`,
+        favicon: "",
+        Info: `目前該軟體還在開發測試版，敬請期待！ At present, the beta version of the software is still under development. Please look forward to it!`,
         header: {
           src: ``,
           menu: ``,
@@ -170,96 +328,36 @@
       // Call the function to generate and insert the HTML
       generateFrame(fw);
     </script>
-    <script>
-      // 目錄
-      if (document.body.hasAttribute("dir")) {
-        const headerList = document.querySelectorAll(".content h2");
-        const toc = document.createElement("div");
-        toc.classList.add("dir");
-        headerList.forEach((header) => {
-          const title = header.getAttribute("data-dir") || header.textContent;
-          header.id = title;
-          const link = document.createElement("a");
-          link.href = "#" + title;
-          link.textContent = title;
-          toc.appendChild(link);
-        });
-        document.body.insertBefore(toc, document.body.firstChild);
+    <script src="index.js"></script>
+    <!-- <script>
+      //   註解
+      function parseAndReplaceNotes(contentElement) {
+        const regex = /_\(\[(.*?)\]: (.*?)\)_/g;
+
+        const modifiedContent = contentElement.innerHTML.replace(
+          regex,
+          (match, title, info) => {
+            return `<span class="notes"><label for="${title}">[${title}]<input type="checkbox" id="${title}" /> </label></span><span class="hide">${info}</span>`;
+          }
+        );
+
+        contentElement.innerHTML = modifiedContent;
       }
 
-      //   幻燈片
-      const olList = document.querySelectorAll("ol");
-      olList.forEach((ol) => {
-        let isSlider = true;
-        const liList = ol.querySelectorAll("li");
-        liList.forEach((li) => {
-          if (
-            li.children.length !== 1 ||
-            li.children[0].tagName !== "IMG" ||
-            li.textContent.trim() !== ""
-          ) {
-            isSlider = false;
+      // 執行功能
+      const observer = new MutationObserver((mutations) => {
+        mutations.forEach((mutation) => {
+          if (mutation.type === "childList" && mutation.addedNodes.length > 0) {
+            const contentElement = document.getElementById("content");
+            if (contentElement) {
+              parseAndReplaceNotes(contentElement);
+              observer.disconnect();
+            }
           }
         });
-
-        if (isSlider) {
-          const slider = document.createElement("div");
-          slider.classList.add("slider");
-          ol.after(slider);
-
-          liList.forEach((li) => {
-            let slide = li.children[0];
-            slide.classList.add("slide");
-            slider.appendChild(slide);
-          });
-
-          ol.remove();
-
-          let currentIndex = 0;
-          const slides = slider.querySelectorAll(".slide");
-          slides[currentIndex].classList.add("active");
-
-          const next = () => {
-            slides[currentIndex].classList.remove("active");
-            currentIndex = (currentIndex + 1) % slides.length;
-            slides[currentIndex].classList.add("active");
-          };
-
-          const previous = () => {
-            slides[currentIndex].classList.remove("active");
-            currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-            slides[currentIndex].classList.add("active");
-          };
-
-          let autoPlayTimeout = setInterval(next, 2000);
-
-          slider.addEventListener("click", () => {
-            clearTimeout(autoPlayTimeout);
-            if (event.clientX > slider.clientWidth / 2) {
-              next();
-            } else {
-              previous();
-            }
-            autoPlayTimeout = setTimeout(() => {
-              autoPlayTimeout = setInterval(next, 2000);
-            }, 5000);
-          });
-        }
       });
 
-      //   網格圖片
-      document.querySelectorAll("ul").forEach(function (ul) {
-        if (
-          Array.from(ul.children).every(
-            (li) =>
-              li.children.length === 1 &&
-              li.children[0].tagName === "IMG" &&
-              li.textContent.trim() === ""
-          )
-        ) {
-          ul.classList.add("grid-img");
-        }
-      });
-    </script>
+      observer.observe(document, { childList: true, subtree: true });
+    </script> -->
   </body>
 </html>
